# MC_TranslatePacker

./: .gitignore  LICENSE  PLAN.md  README.md  build.bat  build.py  pyproject.toml
builder/: __main__.py
builder/core/: local_scanner.py  packager.py
builder/gui/: main_window.py  workers.py
installer_template/: main.py
