[project]
name = "mc-installer-builder"
version = "0.1.0"
description = "Minecraft modpack translation easy installer builder"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6.0",
    "httpx>=0.27.0",
    "pyinstaller>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["builder"]
